deployments/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    httpRoutes: local
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    httpRoutes: local
