deployments/base/vpn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-test
  namespace: random-workloads
  labels:
    app.kubernetes.io/name: sidecar-test
spec:
  containers:
    - name: sidecar-main
      image: nicolaka/netshoot
      command: ["tail"]
      args: ["-f", "/dev/null"]
    - name: qbitttorrent
      image: lscr.io/linuxserver/qbittorrent:latest
      volumeMounts:
        - name: downloads-volume
          mountPath: /downloads
          subPath: downloads
        - name: qbittorrent-config
          mountPath: /config/qBittorrent/qBittorrent.conf
          subPath: qBittorrent.conf
      ports:
        - containerPort: 8080
    - name: wireguard
      image: ghcr.io/linuxserver/wireguard
      imagePullPolicy: IfNotPresent
      securityContext:
        privileged: true
        capabilities:
          add:
            - NET_ADMIN
            - SYS_MODULE
        allowPrivilegeEscalation: true
        readOnlyRootFilesystem: false
      volumeMounts:
        - name: test-volume
          mountPath: /config
          subPath: configs/wireguard/
  securityContext:
    fsGroup: 1000
  volumes:
    - name: qbittorrent-config
      configMap:
        name: qbittorrent-configmap
    - name: test-volume
      nfs:
        server: desktop
        path: /bigdata/media/
        readOnly: false
    - name: downloads-volume
      nfs:
        server: desktop
        path: /bigdata/media/
        readOnly: false
