deployments/base/argo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway-argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-listener-argocd
      hostname: "argocd.nilsherzig.com"
      protocol: HTTPS
      port: 9090
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-nilsherzig-com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-argocd
  namespace: argocd
spec:
  parentRefs:
    - name: tls-gateway-argocd
  hostnames:
    - "argocd.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
