deployments/base/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-argocd
  namespace: argocd
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "argocd.dev.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
