deployments/base/httproute-immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route-immich
  namespace: immich
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "photos.dev.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 3001
