deployments/base/httproute-longhorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "longhorn.dev.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
