deployments/base/hubble-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "hubble.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
