deployments/base/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "external-lockdown"
spec:
  description: "Block all the traffic originating from outside of the cluster"
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-cidr"
spec:
  description: "Allow all the traffic originating from a specific CIDR"
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.3.0/24
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "asd"
spec:
  description: "Allow all the traffic originating from a specific CIDR"
  endpointSelector:
    matchLabels:
      app: homepage
  ingress:
    - fromCIDRSet:
        # - cidr: 192.168.3.0/24
        - cidr: 10.10.10.0/24
  egress:
    - toCIDRSet:
        # - cidr: 192.168.3.0/24
        - cidr: 10.10.10.0/24
